changes at mainstage test

--- a/sites/tt_stages.html
+++ b/sites/tt_stages.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Example of Bootstrap 3 Dynamic Tabs</title>
+    <title>Stages</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="../css/styles.css">
@@ -48,31 +48,31 @@
         ----------------------------------------->
 
         <div class="container-fluid">
-            <a href="tt_artist.html" style="text-decoration: none; color: #ffffff;">
+            <a href="stages/mainstage.html" style="text-decoration: none; color: #ffffff;">
                 <div class="row stage_row" id="mainstage">
                     <div class="stage_img"><img src="../img/stages/mainstage.jpg" class="col-xs-12 stage_img"></div>
                     <div class="col-xs-12 stage_text">MAINSTAGE</div>
                 </div>
             </a>
-            <a href="tt_artist.html" style="text-decoration: none; color: #ffffff;">
+            <a href="stages/clubcircus.html" style="text-decoration: none; color: #ffffff;">
                 <div class="row stage_row" id="clubcircus">
                     <div><img src="../img/stages/clubcircus.jpg" class="col-xs-12 stage_img"></div>
                     <div class="col-xs-12 stage_text">CLUBCIRCUS</div>
                 </div>
             </a>
-            <a href="tt_artist.html" style="text-decoration: none; color: #ffffff;">
+            <a href="stages/qdance.html" style="text-decoration: none; color: #ffffff;">
                 <div class="row stage_row" id="qdance">
                     <div><img src="../img/stages/q-dance.jpg" class="col-xs-12 stage_img"></div>
                     <div class="col-xs-12 stage_text">Q-DANCE</div>
                 </div>
             </a>
-            <a href="tt_artist.html" style="text-decoration: none; color: #ffffff;">
+            <a href="stages/stonehenge.html" style="text-decoration: none; color: #ffffff;">
                 <div class="row stage_row" id="stonehenge">
                     <div><img src="../img/stages/stonehenge.jpg" class="col-xs-12 stage_img"></div>
                     <div class="col-xs-12 stage_text">STONEHENGE</div>
                 </div>
             </a>
-            <a href="tt_artist.html" style="text-decoration: none; color: #ffffff;">
+            <a href="stages/heineken.html" style="text-decoration: none; color: #ffffff;">
                 <div class="row stage_row" id="starclub">
                     <div><img src="../img/stages/heineken.jpg" class="col-xs-12 stage_img"></div>
                     <div class="col-xs-12 stage_text">HEINEKEN - STARCLUB</div>
