--- a/sites/map.html
+++ b/sites/map.html
@@ -5,72 +5,29 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <style>
-        html, body, #map-canvas {
-            height: 100%;
-            margin: 0px;
-            padding: 0px
+        .google-maps {
+            position: relative;
+            padding-bottom: 75%; // This is the aspect ratio
+        height: 0;
+            overflow: hidden;
+        }
+        .google-maps iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100% !important;
+            height: 100% !important;
         }
     </style>
+
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
 
-    <script>
-        // Note: This example requires that you consent to location sharing when
-        // prompted by your browser. If you see a blank space instead of the map, this
-        // is probably because you have denied permission for location sharing.
 
-        var map;
-
-        function initialize() {
-            var mapOptions = {
-                zoom: 6
-            };
-            map = new google.maps.Map(document.getElementById('map-canvas'),
-                    mapOptions);
-
-            // Try HTML5 geolocation
-            if(navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(function(position) {
-                    var pos = new google.maps.LatLng(position.coords.latitude,
-                            position.coords.longitude);
-
-                    var infowindow = new google.maps.InfoWindow({
-                        map: map,
-                        position: pos,
-                        content: 'Location found using HTML5.'
-                    });
-
-                    map.setCenter(pos);
-                }, function() {
-                    handleNoGeolocation(true);
-                });
-            } else {
-                // Browser doesn't support Geolocation
-                handleNoGeolocation(false);
-            }
-        }
-
-        function handleNoGeolocation(errorFlag) {
-            if (errorFlag) {
-                var content = 'Error: The Geolocation service failed.';
-            } else {
-                var content = 'Error: Your browser doesn\'t support geolocation.';
-            }
-
-            var options = {
-                map: map,
-                position: new google.maps.LatLng(60, 105),
-                content: content
-            };
-
-            var infowindow = new google.maps.InfoWindow(options);
-            map.setCenter(options.position);
-        }
-
-        google.maps.event.addDomListener(window, 'load', initialize);
-
-    </script>
 </head>
 <body>
-<div id="map-canvas"></div>
+<div class="google-maps">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d2678.805685085583!2d13.173686!3d47.823983!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sde!2sat!4v1431703938410" width="800" height="600" frameborder="0" style="border:0"></iframe>
+</div>
+
 </body>
 </html>
