--- a/sites/map.html
+++ b/sites/map.html
@@ -1,76 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Geolocation</title>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <meta charset="utf-8">
-    <style>
-        html, body, #map-canvas {
-            height: 100%;
-            margin: 0px;
-            padding: 0px
-        }
-    </style>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCmouXxBlDi9G_UQigvgCxilD8LjKWMfBc&sensor=false#"></script>
 
     <script>
-        // Note: This example requires that you consent to location sharing when
-        // prompted by your browser. If you see a blank space instead of the map, this
-        // is probably because you have denied permission for location sharing.
-
-        var map;
+        var mainstage = new google.maps.LatLng(47.823641,13.174995);
 
         function initialize() {
-            var mapOptions = {
-                zoom: 6
+            var mapProp = {
+                center:mainstage,
+                zoom:15,
+                mapTypeId:google.maps.MapTypeId.HYBRID
             };
-            map = new google.maps.Map(document.getElementById('map-canvas'),
-                    mapOptions);
+            var map=new google.maps.Map(document.getElementById("googleMap"), mapProp);
 
-            // Try HTML5 geolocation
-            if(navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(function(position) {
-                    var pos = new google.maps.LatLng(position.coords.latitude,
-                            position.coords.longitude);
+            var marker= new google.maps.Marker({
+                position:mainstage,
+            });
+            marker.setMap(map);
 
-                    var infowindow = new google.maps.InfoWindow({
-                        map: map,
-                        position: pos,
-                        content: 'Location found using HTML5.'
-                    });
-
-                    map.setCenter(pos);
-                }, function() {
-                    handleNoGeolocation(true);
-                });
-            } else {
-                // Browser doesn't support Geolocation
-                handleNoGeolocation(false);
-            }
         }
-
-        function handleNoGeolocation(errorFlag) {
-            if (errorFlag) {
-                var content = 'Error: The Geolocation service failed.';
-            } else {
-                var content = 'Error: Your browser doesn\'t support geolocation.';
-            }
-
-            var options = {
-                map: map,
-                position: new google.maps.LatLng(60, 105),
-                content: content
-            };
-
-            var infowindow = new google.maps.InfoWindow(options);
-            map.setCenter(options.position);
-        }
-
         google.maps.event.addDomListener(window, 'load', initialize);
-
     </script>
+    <link href="../css/styles.css" rel="stylesheet" type="text/css">
+    <title>Online Map</title>
 </head>
+
 <body>
-<div id="map-canvas"></div>
+    <div class="content-info">
+        <a href="../index.html" class="js">
+            <div class="header_div">
+                <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
+            </div>
+        </a>
+        <div id="googleMap" style="width:100%;height:500px;"></div>
+    </div>
 </body>
 </html>
