--- a/sites/map.html
+++ b/sites/map.html
@@ -4,22 +4,44 @@
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCmouXxBlDi9G_UQigvgCxilD8LjKWMfBc&sensor=false#"></script>
 
     <script>
-        var mainstage = new google.maps.LatLng(47.823641,13.174995);
-
-        function initialize() {
+        function initialize()
+        {
             var mapProp = {
-                center:mainstage,
-                zoom:15,
-                mapTypeId:google.maps.MapTypeId.HYBRID
+                center: new google.maps.LatLng(47.822524, 13.175407),
+                zoom: 16,
+                mapTypeId: google.maps.MapTypeId.SATELLITE
             };
-            var map=new google.maps.Map(document.getElementById("googleMap"), mapProp);
-
-            var marker= new google.maps.Marker({
-                position:mainstage,
-            });
-            marker.setMap(map);
-
+            var map = new google.maps.Map(document.getElementById("googleMap"), mapProp);
+            setMarkers(map, places);
         }
+
+        var places = [
+                ['Mainstage', 47.823641, 13.174995, 1],
+                ['Clubcircus', 47.819711, 13.175657, 2],
+                ['qdance', 47.822762, 13.173973, 3],
+                ['heineken', 47.819755, 13.176511, 4],
+                ['stonehenge', 47.821173, 13.171642, 6],
+                ['basic', 47.820915, 13.171459, 5],
+                ['caravan', 47.823966, 13.178707, 7],
+                ['comfort', 47.823263, 13.179155, 8]
+        ];
+
+        function setMarkers(map, locations) {
+            var image = '../img/max/stages_map.png';
+
+            for (var i = 0; i < locations.length; i++) {
+                var place = locations[i];
+                var myLatLng = new google.maps.LatLng(place[1], place[2]);
+                var marker = new google.maps.Marker({
+                    position: myLatLng,
+                    map: map,
+                    icon: image,
+                    title: place[0],
+                    zIndex: place[3]
+                });
+            }
+        }
+
         google.maps.event.addDomListener(window, 'load', initialize);
     </script>
     <link href="../css/styles.css" rel="stylesheet" type="text/css">
@@ -33,7 +55,7 @@
                 <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
             </div>
         </a>
-        <div id="googleMap" style="width:100%;height:500px;"></div>
+        <div id="googleMap" style="width:100%;height:600px;"></div>
     </div>
 </body>
 </html>
