added:  - offline map jpeg  - countdown now on mainpage  - map.html changes

--- a/sites/love/countdown.html
+++ b/sites/love/countdown.html
@@ -28,32 +28,7 @@
                 Countdown
             </div>
         </a>
-        <div class="container-fluid">
-            <div class="col-xs-12 countdown_text">Time until Electric Love Festival 2015 starts:</div>
-
-
-            <div class="numbers" id="count2"></div>
-
-            <div class="row" style="padding: 0px; margin: 0px;">
-                <div class="col-xs-3 numbers" id="dday" style="padding: -5px"></div>
-                <div class="col-xs-3 numbers" id="dhour"></div>
-                <div class="col-xs-3 numbers" id="dmin"></div>
-                <div class="col-xs-3 numbers" id="dsec"></div>
-
-            </div>
-
-
-
-            <div class="row" style="padding: 0px; margin: 0px;">
-                <div class="col-xs-3 title" id="days">DAYS</div>
-                <div class="col-xs-3 title" id="hours">HOURS</div>
-                <div class="col-xs-3 title" id="minutes">MINUTES</div>
-                <div class="col-xs-3 title" id="seconds">SECONDS</div>
-
-            </div>
-        </div>
-
+        <img src="../../img/max/offlinemap.jpg" class="img-responsive"/>
     </div>
-    <script src="../../js/countdown.js"></script>
 </body>
 </html>
