--- a/index.html
+++ b/index.html
@@ -41,8 +41,32 @@
                 <div class="col-xs-4" style="padding: 0px"><a class="js" href="sites/food.html"><img class="item_main" src="img/max/food.gif"></a></div>
             </div>
 
+            <hr style="margin: 15px 0 15px 0">
+
+            <div class="numbers" id="count2"></div>
+
+            <div class="row" style="padding: 0px; margin: 0px;">
+                <div class="col-xs-3 numbers" id="dday" style="padding: -5px"></div>
+                <div class="col-xs-3 numbers" id="dhour"></div>
+                <div class="col-xs-3 numbers" id="dmin"></div>
+                <div class="col-xs-3 numbers" id="dsec"></div>
+
+            </div>
+
+
+
+            <div class="row" style="padding: 0px; margin: 0px;">
+                <div class="col-xs-3 title" id="days">DAYS</div>
+                <div class="col-xs-3 title" id="hours">HOURS</div>
+                <div class="col-xs-3 title" id="minutes">MINUTES</div>
+                <div class="col-xs-3 title" id="seconds">SECONDS</div>
+
+            </div>
         </div>
+
+
     </div>
+    <script src="js/countdown.js"></script>
 
 </body>
 
