--- a/sites/love.html
+++ b/sites/love.html
@@ -42,9 +42,9 @@
     </a>
     <a href="love/countdown.html" class="alink">
         <div class="row row_style">
-            <div class="col-xs-6"><img src="../img/max/hourglass.png" class="img-responsive img_field hourglass"/></div>
+            <div class="col-xs-6"><img src="../img/max/maps.gif" class="img-responsive img_field hourglass"/></div>
             <div class="col-xs-6 outer">
-                <div class="text_field">Check how long it is until Electric Love Festival 2015 starts!!</div>
+                <div class="text_field">Check our offline map if you dont have an internet connection!</div>
             </div>
         </div>
     </a>
