--- a/sites/love.html
+++ b/sites/love.html
@@ -40,7 +40,7 @@
             <div class="col-xs-6"><img src="../img/max/gallery.png" class="img-responsive img_field"/></div>
         </div>
     </a>
-    <a href="love/countdown.html" class="alink">
+    <a href="love/offlinemap.html" class="alink">
         <div class="row row_style">
             <div class="col-xs-6"><img src="../img/max/maps.gif" class="img-responsive img_field hourglass"/></div>
             <div class="col-xs-6 outer">
