--- a/sites/love/offlinemap.html
+++ b/sites/love/offlinemap.html
@@ -17,7 +17,7 @@
     <link href="../../css/styles.css" rel="stylesheet" type="text/css"/>
 
 
-    <title>Electric Love Festival</title>
+    <title>Electric Love Festival Offline Map</title>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
         <a href="" class="js" style="text-decoration: none">
             <div class="header_div" onclick="history.go(-1);return true;">
                 <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back">
-                Countdown
+                Offline Map
             </div>
         </a>
         <img src="../../img/max/offlinemap.jpg" class="img-responsive"/>
