logo, background new

--- a/sites/love.html
+++ b/sites/love.html
@@ -42,7 +42,7 @@
     </a>
     <a href="love/offlinemap.html" class="alink">
         <div class="row row_style">
-            <div class="col-xs-6"><img src="../img/max/maps.gif" class="img-responsive img_field hourglass"/></div>
+            <div class="col-xs-6"><img src="../img/max/map_offline_icon.png" class="img-responsive img_field"/></div>
             <div class="col-xs-6 outer">
                 <div class="text_field">Check our offline map if you dont have an internet connection!</div>
             </div>
