coordinates for  - camping  - parking  - stages
 added

--- a/sites/map.html
+++ b/sites/map.html
@@ -8,8 +8,8 @@
     <title>Online Map</title>
 </head>
 
-<body style="color: #000000">
-    <div class="content-info" style="color: #000000">
+<body>
+    <div class="content-info" style="padding: 0; margin: 0 0 5px 0">
         <a href="../index.html" class="js" style="color: #000000">
             <div class="header_div" style="color: #000000">
                 <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
