--- a/sites/love/offlinemap.html
+++ b/sites/love/offlinemap.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=yes" />
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=true" />
 
     <!-- Bootstrap init -->
     <script src="../../js/jquery-1.11.2.min.js"></script>
