--- a/sites/tt_artist.html
+++ b/sites/tt_artist.html
@@ -9,6 +9,8 @@
     <script src="../js/jquery-1.11.2.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
 
+    <title>Timetable Artists</title>
+
 
     <script>
         function disp( divs ) {
@@ -27,8 +29,8 @@
 <body>
     <div id="everything" class="content-info js">
         <div class="row" style="padding: 0; margin: 0 0 5px 0; ">
-            <a href="" style="text-decoration: none;">
-                <div class="col-xs-10 header_div" onclick="history.go(-1);return true;" style="padding: 0">
+            <a href="timetable.html" style="text-decoration: none;">
+                <div class="col-xs-10 header_div" style="padding: 0">
                     <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
                     Artists
                 </div>
