--- a/sites/tt_stages.html
+++ b/sites/tt_stages.html
@@ -9,14 +9,16 @@
     <script src="../js/jquery-1.11.2.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
 
+    <title>Timetable Stages</title>
+
 </head>
 
 <body>
     <div id="everything" class="content-info">
-        <a href="" class="js" style="text-decoration: none">
-            <div class="header_div" onclick="history.go(-1);return true;">
+        <a href="timetable.html" class="js" style="text-decoration: none">
+            <div class="header_div">
                 <img src="../img/max/arrow_left_back.gif" class="header_arrow_back">
-                Offline Map
+                Timetable Stages
             </div>
         </a><!--
             <div class="col-xs-2" style="padding: 0px">
