--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="row">
                 <div class="col-xs-4" style="padding: 0px"><a class="js" href="sites/artists.html"><img class="item_main" src="img/max/dj.gif"></a></div>
                 <div class="col-xs-4" style="padding: 0px"><a class="js" href="sites/information.html"><img class="item_main" src="img/max/info.gif"></a></div>
-                <div class="col-xs-4" style="padding: 0px"><a class="js" href="sites/food.html"><img class="item_main" src="img/max/food.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0px"><a class="js" href="sites/test.html"><img class="item_main" src="img/max/food.gif"></a></div>
             </div>
 
             <hr style="margin: 15px 0 15px 0">
