--- a/sites/test.html
+++ b/sites/test.html
@@ -7,51 +7,28 @@
     <link href="../css/hammer.css" rel="stylesheet" type="text/css"/>
     <script src="../js/hammer.js"></script>
     <script>
-        var dom   = document.body,
-            width = parseInt($('#square').css('width')),
-            vel   = 5.0,
-            min   = 100,
-            max   = 400,
-            scale;
+        var myElement = document.getElementById('myElement');
 
-    function gestureChange( e ) {
-        e.preventDefault();
+        var mc = new Hammer.Manager(myElement);
 
-        scale = e.scale;
+        // create a pinch and rotate recognizer
+        // these require 2 pointers
+        var pinch = new Hammer.Pinch();
+        var rotate = new Hammer.Rotate();
 
-        var tempWidth = width * scale;
+        // we want to detect both the same time
+        pinch.recognizeWith(rotate);
 
-        if ( tempWidth > max ) tempWidth = max;
-        if ( tempWidth < min ) tempWidth = min;
+        // add to the Manager
+        mc.add([pinch, rotate]);
 
-        $( '#square' ).css( {
-            width  : tempWidth + 'px',
-            height : tempWidth + 'px'
-        } );
-    }
 
-    function gestureEnd( e ) {
-        e.preventDefault();
-
-        width = parseInt( $( '#square' ).css( 'width' ) );
-    }
-
-    Hammer( square ).on( 'pinch', gestureChange );
+        mc.on("pinch rotate", function(ev) {
+            myElement.textContent += ev.type +" ";
+        });
     </script>
 </head>
 <body>
-
-<p>
-    Pinch anywhere. The blue square should expand or shrink (to a degree). The red circle should stay the same.
-</p>
-
-<div class="wrapper">
-    <div class="wrap">
-        <div id="circle"></div>
-    </div>
-    <div class="wrap">
-        <div id="square"></div>
-    </div>
-</div>
+<div id="myElement"></div>
 </body>
 </html>
