index now with 9 tiles...
offline map, merch, stages, gallery now not in a sub directory

--- a/www/index.html
+++ b/www/index.html
@@ -29,15 +29,20 @@
                 <img src="img/main/logo_name.gif" style="width: 250px; height: 53px"/>
             </div>
 
-            <div class="row" style="margin-bottom: 20px">
-                <div class="col-xs-4" style="padding: 0px"><a class="js" href="sites/timetable.html"><img class="item_main" src="img/max/timetable.gif"></a></div>
-                <div class="col-xs-4" style="padding: 0px"><a class="js" href="sites/love.html"><img class="item_main spinning" src="img/main/logo_new.gif"></a></div>
-                <div class="col-xs-4" style="padding: 0px"><a class="js" href="sites/map.html"><img class="item_main" src="img/max/maps.gif"></a></div>
+            <div class="row" style="margin-bottom: 15px">
+                <div class="col-xs-4" style="padding: 0"><a class="js" href="sites/tt_artist.html"><img class="item_main" src="img/max/timetable.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0"><a class="js" href="sites/merch.html"><img class="item_main spinning" src="img/main/logo_new.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0"><a class="js" href="sites/map.html"><img class="item_main" src="img/max/maps.gif"></a></div>
+            </div>
+            <div class="row" style="margin-bottom: 15px">
+                <div class="col-xs-4" style="padding: 0"><a class="js" href="sites/artists.html"><img class="item_main" src="img/max/dj.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0"><a class="js" href="sites/information.html"><img class="item_main" src="img/max/info.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0"><a class="js" href="sites/test.html"><img class="item_main" src="img/max/food.gif"></a></div>
             </div>
             <div class="row">
-                <div class="col-xs-4" style="padding: 0px"><a class="js" href="sites/artists.html"><img class="item_main" src="img/max/dj.gif"></a></div>
-                <div class="col-xs-4" style="padding: 0px"><a class="js" href="sites/information.html"><img class="item_main" src="img/max/info.gif"></a></div>
-                <div class="col-xs-4" style="padding: 0px"><a class="js" href="sites/test.html"><img class="item_main" src="img/max/food.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0"><a class="js" href="sites/gallery.html"><img class="item_main" src="img/max/gallery.png"></a></div>
+                <div class="col-xs-4" style="padding: 0"><a class="js" href="sites/tt_stages.html"><img class="item_main" src="img/max/stages.png"></a></div>
+                <div class="col-xs-4" style="padding: 0"><a class="js" href="sites/offlinemap.html"><img class="item_main" src="img/max/map_offline_icon.png"></a></div>
             </div>
 
             <hr style="margin: 15px 0 15px 0">
