--- a/www/sites/tt_stages.html
+++ b/www/sites/tt_stages.html
@@ -15,10 +15,10 @@
 
 <body>
     <div id="everything" class="content-info">
-        <a href="timetable.html" class="js" style="text-decoration: none">
-            <div class="header_div">
-                <img src="../img/max/arrow_left_back.gif" class="header_arrow_back">
-                Timetable Stages
+        <a href="../index.html" class="js" style="color: white; text-decoration: none;">
+            <div class="header_div" style="color: white">
+                <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
+                Stages
             </div>
         </a><!--
             <div class="col-xs-2" style="padding: 0px">
