--- a/www/sites/tt_artist.html
+++ b/www/sites/tt_artist.html
@@ -16,7 +16,7 @@
 <body>
     <div id="everything" class="content-info js">
         <div class="row" style="padding: 0; margin: 0 0 5px 0; ">
-            <a href="timetable.html" style="text-decoration: none;">
+            <a href="../index.html" style="text-decoration: none;">
                 <div class="col-xs-10 header_div" style="padding: 0">
                     <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
                     Artists
