--- a/www/index.html
+++ b/www/index.html
@@ -7,8 +7,8 @@
     <!-- Bootstrap init -->
     <script src="js/jquery-1.11.2.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
     <script src="phonegap.js"></script>
+    <script src="js/main.js"></script>
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCmouXxBlDi9G_UQigvgCxilD8LjKWMfBc&sensor=false#"></script>
 
         <!-- Styles init -->
@@ -30,19 +30,19 @@
             </div>
 
             <div class="row" style="margin-bottom: 15px">
-                <div class="col-xs-4" style="padding: 0"><a class="js" href="sites/tt_artist.html"><img class="item_main" src="img/max/timetable.gif"></a></div>
-                <div class="col-xs-4" style="padding: 0"><a class="js" href="sites/information.html"><img class="item_main" src="img/max/info.gif"></a></div>
-                <div class="col-xs-4" style="padding: 0"><a class="js" href="sites/map.html"><img class="item_main" src="img/max/maps.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0"><a href="sites/timetable.html"><img class="item_main" src="img/max/timetable.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0"><a href="sites/stages.html"><img class="item_main" src="img/max/stages_icon.png"></a></div>
+                <div class="col-xs-4" style="padding: 0"><a href="sites/map.html"><img class="item_main" src="img/max/maps.gif"></a></div>
             </div>
             <div class="row" style="margin-bottom: 15px">
-                <div class="col-xs-4" style="padding: 0"><a class="js" href="sites/artists.html"><img class="item_main" src="img/max/dj.gif"></a></div>
-                <div class="col-xs-4" style="padding: 0"><a class="js" href="sites/merch.html"><img class="item_main spinning" src="img/main/logo_new.gif"></a></div>
-                <div class="col-xs-4" style="padding: 0"><a class="js" href="sites/test.html"><img class="item_main" src="img/max/food.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0"><a href="sites/artists.html"><img class="item_main" src="img/max/dj.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0"><a href="sites/merch.html"><img class="item_main spinning" src="img/main/logo_new.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0"><a href="sites/food.html"><img class="item_main" src="img/max/food.gif"></a></div>
             </div>
             <div class="row">
-                <div class="col-xs-4" style="padding: 0"><a class="js" href="sites/gallery.html"><img class="item_main" src="img/max/gallery_icon.png"></a></div>
-                <div class="col-xs-4" style="padding: 0"><a class="js" href="sites/tt_stages.html"><img class="item_main" src="img/max/stages_icon.png"></a></div>
-                <div class="col-xs-4" style="padding: 0"><a class="js" href="sites/offlinemap.html"><img class="item_main" src="img/max/offlinemap_icon.png"></a></div>
+                <div class="col-xs-4" style="padding: 0"><a href="sites/gallery.html"><img class="item_main" src="img/max/gallery_icon.png"></a></div>
+                <div class="col-xs-4" style="padding: 0"><a href="sites/information.html"><img class="item_main" src="img/max/info.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0"><a href="sites/offlinemap.html"><img class="item_main" src="img/max/offlinemap_icon.png"></a></div>
             </div>
 
             <hr style="margin: 15px 0 15px 0">
