--- a/www/sites/artists.html
+++ b/www/sites/artists.html
@@ -7,7 +7,6 @@
     <!-- Bootstrap init -->
     <script src="../js/jquery-1.11.2.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
-    <script src="phonegap.js"></script>
     <script src="../js/main.js"></script>
 
     <!-- Styles init -->
@@ -26,9 +25,10 @@
 <body>
 
     <div id="everything" class="content-info">
-        <a href="../index.html" class="js">
+        <a href="../index.html" style="text-decoration: none">
             <div class="header_div">
-                <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
+                <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
+                Artists
             </div>
         </a>
 
