--- a/www/sites/gallery.html
+++ b/www/sites/gallery.html
@@ -7,7 +7,6 @@
     <!-- Bootstrap init -->
     <script src="../js/jquery-1.11.2.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
-    <script src="phonegap.js"></script>
     <script src="../js/main.js"></script>
     <script src="../js/swipe.js"></script>
 
@@ -34,9 +33,9 @@
 <body>
 
 <div class="content-info">
-    <a href="../index.html" class="js" style="color: white; text-decoration: none;">
+    <a href="../index.html" style="color: white; text-decoration: none;">
         <div class="header_div" style="color: white">
-            <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
+            <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
             Gallery
         </div>
     </a>
