--- a/www/sites/merch.html
+++ b/www/sites/merch.html
@@ -8,7 +8,6 @@
     <script src="../js/jquery-1.11.2.min.js"></script>
     <script src="../js/lightbox.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
-    <script src="phonegap.js"></script>
     <script src="../js/main.js"></script>
 
     <!-- Styles init -->
@@ -28,9 +27,9 @@
 <body>
 
 <div class="content-info">
-    <a href="../index.html" class="js" style="color: white; text-decoration: none;">
+    <a href="../index.html" style="color: white; text-decoration: none;">
         <div class="header_div" style="color: white">
-            <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
+            <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
             Merchandise
         </div>
     </a>
