--- a/www/sites/past/timetable.html
+++ b/www/sites/past/timetable.html
@@ -36,7 +36,7 @@
     <div class="tt_row">
         <div class="col-xs-6" style="padding: 10px">
             <div class="tt_element">
-                <a href="../tt_artist.html" style="text-decoration: none; color: #ffffff;">
+                <a href="../timetable.html" style="text-decoration: none; color: #ffffff;">
                     <div class="tt_text">Artists</div>
                     <div><img src="../../img/max/dj_ohne.png" class="tt_img"></div>
                 </a>
@@ -44,7 +44,7 @@
         </div>
         <div class="col-xs-6" style="padding: 10px">
             <div class="tt_element">
-                <a href="../tt_stages.html" style="text-decoration: none; color: #ffffff;">
+                <a href="../stages.html" style="text-decoration: none; color: #ffffff;">
                     <div class="tt_text">Stages</div>
                     <div ><img src="../../img/max/stages.png" class="tt_img"></div>
                 </a>
