--- a/www/sites/map.html
+++ b/www/sites/map.html
@@ -3,16 +3,19 @@
 <head>
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCmouXxBlDi9G_UQigvgCxilD8LjKWMfBc&sensor=false#"></script>
 
+    <script src="../js/main.js"></script>
     <script src="../js/map.js"></script>
     <link href="../css/styles.css" rel="stylesheet" type="text/css">
     <title>Online Map</title>
+
 </head>
 
 <body>
     <div class="content-info" style="padding: 0; margin: 0 0 5px 0">
-        <a href="../index.html" class="js" style="color: #000000">
-            <div class="header_div" style="color: #000000">
-                <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
+        <a href="../index.html" style="text-decoration: none">
+            <div class="header_div">
+                <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
+                Online Map
             </div>
         </a>
         <div id="googleMap" style="width:100%;height:500px; color: #000000"></div>
