--- a/www/sites/offlinemap.html
+++ b/www/sites/offlinemap.html
@@ -8,8 +8,7 @@
     <script src="../js/jquery-1.11.2.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/main.js"></script>
-
-    <script src="phonegap.js"></script>
+    <script src="../js/main.js"></script>
 
     <!-- Styles init -->
     <link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css"/>
@@ -23,9 +22,9 @@
 
 <body>
     <div class="content-info">
-        <a href="../index.html" class="js" style="color: white; text-decoration: none;">
+        <a href="../index.html" style="color: white; text-decoration: none;">
             <div class="header_div" style="color: white">
-                <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
+                <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
                 Offline Map
             </div>
         </a>
