--- a/www/sites/stages.html
+++ b/www/sites/stages.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <script src="../js/jquery-1.11.2.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/main.js"></script>
 
     <title>Timetable Stages</title>
 
@@ -15,9 +16,9 @@
 
 <body>
     <div id="everything" class="content-info">
-        <a href="../index.html" class="js" style="color: white; text-decoration: none;">
+        <a href="../index.html" style="color: white; text-decoration: none;">
             <div class="header_div" style="color: white">
-                <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
+                <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
                 Stages
             </div>
         </a><!--
