--- a/www/sites/timetable.html
+++ b/www/sites/timetable.html
@@ -8,18 +8,19 @@
     <link rel="stylesheet" href="../css/styles.css">
     <script src="../js/jquery-1.11.2.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/main.js"></script>
 
     <title>Timetable Artists</title>
 
 </head>
 
 <body>
-    <div id="everything" class="content-info js">
+    <div id="everything" class="content-info">
         <div class="row" style="padding: 0; margin: 0 0 5px 0; ">
             <a href="../index.html" style="text-decoration: none;">
                 <div class="col-xs-10 header_div" style="padding: 0">
-                    <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
-                    Artists
+                    <img src="../img/max/arrow_left_back.gif" class="header_arrow_back" style="margin-right: -50px"/>
+                    Timetable
                 </div>
             </a>
             <div class="col-xs-2" style="padding: 0">
