--- a/www/index.html
+++ b/www/index.html
@@ -23,8 +23,8 @@
 </head>
 
 <body style="overflow: hidden">
-    <div id="everything" class="containerbox" style="overflow:hidden ">
-        <div id="main" class="element" style="overflow: hidden">
+    <div id="everything" class="parent" style="overflow:hidden ">
+        <div id="main" class="child" style="overflow: hidden">
             <div class="col-xs-12 icon_name" style="margin-bottom: 20px">
                 <img src="img/main/logo_name.gif" style="width: 250px; height: 53px"/>
             </div>
