--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
 
 </head>
 
-<body>
+<body style="overflow: hidden">
     <div id="everything" class="parent">
         <div id="main" class="child">
             <div class="col-xs-12 icon_name" style="margin-bottom: 20px">
