--- a/www/index.html
+++ b/www/index.html
@@ -8,48 +8,44 @@
     <script src="js/jquery-1.11.2.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="phonegap.js"></script>
-    <script src="js/main.js"></script>
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCmouXxBlDi9G_UQigvgCxilD8LjKWMfBc&sensor=false#"></script>
-
         <!-- Styles init -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css"/>
     <link rel="stylesheet" href="css/bootstrap-theme.min.css" type="text/css"/>
     <link rel="stylesheet" href="css/normalize.css" type="text/css"/>
     <link rel="stylesheet" href="css/styles.css" type="text/css"/>
 
-
     <title>Electric Love Festival</title>
-
 </head>
 
-<body style="overflow: hidden">
-    <div id="everything" class="parent" style="overflow: hidden">
-        <div id="main" class="child" style="overflow: hidden">
+<body>
+    <div class="parent">
+        <div class="child">
             <div class="col-xs-12 icon_name" style="margin-bottom: 20px">
                 <img src="img/main/logo_name.gif" style="width: 250px; height: 53px"/>
             </div>
 
             <div class="row" style="margin-bottom: 15px">
-                <div class="col-xs-4" style="padding: 0"><a href="sites/timetable.html"><img class="item_main" src="img/max/timetable.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0"><a href="sites/timetable.html"><img class="item_main" style="float: right" src="img/max/timetable.gif"></a></div>
                 <div class="col-xs-4" style="padding: 0"><a href="sites/stages.html"><img class="item_main" src="img/max/stages_icon.png"></a></div>
-                <div class="col-xs-4" style="padding: 0"><a href="sites/map.html"><img class="item_main" src="img/max/maps.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0"><a href="sites/map.html"><img class="item_main" style="float: left" src="img/max/maps.gif"></a></div>
             </div>
             <div class="row" style="margin-bottom: 15px">
-                <div class="col-xs-4" style="padding: 0"><a href="sites/artists.html"><img class="item_main" src="img/max/dj.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0"><a href="sites/artists.html"><img class="item_main" style="float: right" src="img/max/dj.gif"></a></div>
                 <div class="col-xs-4" style="padding: 0"><a href="sites/merch.html"><img class="item_main spinning" src="img/main/logo_new.gif"></a></div>
-                <div class="col-xs-4" style="padding: 0"><a href="sites/food.html"><img class="item_main" src="img/max/food.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0"><a href="sites/food.html"><img class="item_main" style="float: left" src="img/max/food.gif"></a></div>
             </div>
             <div class="row">
-                <div class="col-xs-4" style="padding: 0"><a href="sites/gallery.html"><img class="item_main" src="img/max/gallery_icon.png"></a></div>
+                <div class="col-xs-4" style="padding: 0"><a href="sites/gallery.html"><img class="item_main" style="float: right" src="img/max/gallery_icon.png"></a></div>
                 <div class="col-xs-4" style="padding: 0"><a href="sites/information.html"><img class="item_main" src="img/max/info.gif"></a></div>
-                <div class="col-xs-4" style="padding: 0"><a href="sites/offlinemap.html"><img class="item_main" src="img/max/offlinemap_icon.png"></a></div>
+                <div class="col-xs-4" style="padding: 0"><a href="sites/offlinemap.html"><img class="item_main" style="float: left" src="img/max/offlinemap_icon.png"></a></div>
             </div>
 
-            <hr style="margin: 15px 0 15px 0">
+            <hr style="margin: 15px 40px 15px 40px;">
 
             <div class="numbers" id="count2"></div>
 
-            <div class="row" style="padding: 0px; margin: 0px;">
+            <div class="row" style="padding: 0 30px 0 30px; margin: 0;">
                 <div class="col-xs-3 numbers" id="dday" style="padding: -5px"></div>
                 <div class="col-xs-3 numbers" id="dhour"></div>
                 <div class="col-xs-3 numbers" id="dmin"></div>
@@ -59,7 +55,7 @@
 
 
 
-            <div class="row" style="padding: 0px; margin: 0px;">
+            <div class="row" style="padding: 0 30px 0 30px; margin: 0;">
                 <div class="col-xs-3 title" id="days">DAYS</div>
                 <div class="col-xs-3 title" id="hours">HOURS</div>
                 <div class="col-xs-3 title" id="minutes">MINUTES</div>
@@ -71,6 +67,8 @@
 
     </div>
     <script src="js/countdown.js"></script>
+
+
 
 </body>
 
