--- a/www/sites/map.html
+++ b/www/sites/map.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCmouXxBlDi9G_UQigvgCxilD8LjKWMfBc&sensor=false#"></script>
-
+    <script src="phonegap.js"></script>
     <script src="../js/main.js"></script>
     <script src="../js/map.js"></script>
     <link href="../css/styles.css" rel="stylesheet" type="text/css">
