--- a/www/index.html
+++ b/www/index.html
@@ -19,8 +19,8 @@
 </head>
 
 <body>
-    <div class="parent">
-        <div class="child">
+    <div class="parent" style="overflow: hidden">
+        <div class="child" style="overflow: hidden">
             <div class="col-xs-12 icon_name" style="margin-bottom: 20px">
                 <img src="img/main/logo_name.gif" style="width: 250px; height: 53px"/>
             </div>
