--- a/www/sites/gallery.html
+++ b/www/sites/gallery.html
@@ -8,6 +8,7 @@
     <script src="../js/jquery-1.11.2.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/main.js"></script>
+    <script src="phonegap.js"></script>
     <script src="../js/swipe.js"></script>
 
     <!-- Styles init -->
