--- a/www/sites/merch.html
+++ b/www/sites/merch.html
@@ -9,6 +9,7 @@
     <script src="../js/lightbox.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/main.js"></script>
+    <script src="phonegap.js"></script>
 
     <!-- Styles init -->
     <link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css"/>
