--- a/www/sites/offlinemap.html
+++ b/www/sites/offlinemap.html
@@ -8,7 +8,7 @@
     <script src="../js/jquery-1.11.2.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/main.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="phonegap.js"></script>
 
     <!-- Styles init -->
     <link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css"/>
