--- a/www/sites/timetable.html
+++ b/www/sites/timetable.html
@@ -9,7 +9,7 @@
     <script src="../js/jquery-1.11.2.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/main.js"></script>
-
+    <script src="phonegap.js"></script>
     <title>Timetable Artists</title>
 
 </head>
