--- a/www/sites/offlinemap.html
+++ b/www/sites/offlinemap.html
@@ -6,6 +6,7 @@
 
     <!-- Bootstrap init -->
     <script src="../js/jquery-1.11.2.min.js"></script>
+    <script src="../js/hammer.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/main.js"></script>
     <script src="phonegap.js"></script>
@@ -14,13 +15,72 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css"/>
     <link rel="stylesheet" href="../css/bootstrap-theme.min.css" type="text/css"/>
     <link rel="stylesheet" href="../css/normalize.css" type="text/css"/>
-    <link href="../css/styles.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="../css/hammer.css" type="text/css"/>
+    <!-- <link href="../css/styles.css" rel="stylesheet" type="text/css"/> -->
 
 
     <title>Electric Love Festival Offline Map</title>
+
+    <script>
+        var hammertime = Hammer(document.getElementById('zoomwrapper1'), {
+            transform_always_block: true,
+            transform_min_scale: 1,
+            drag_block_horizontal: true,
+            drag_block_vertical: true,
+            drag_min_distance: 0
+        });
+
+        var posX=0, posY=0,
+                lastPosX=0, lastPosY=0,
+                bufferX=0, bufferY=0,
+                scale=1, last_scale,
+                rotation= 1, last_rotation, dragReady=0;
+
+        hammertime.on('touch drag dragend transform', function(ev) {
+            elemRect = document.getElementById('zoom1');
+            manageMultitouch(ev);
+        });
+
+        function manageMultitouch(ev){
+
+            switch(ev.type) {
+                case 'touch':
+                    last_scale = scale;
+                    last_rotation = rotation;
+
+                    break;
+
+                case 'drag':
+                    posX = ev.gesture.deltaX + lastPosX;
+                    posY = ev.gesture.deltaY + lastPosY;
+                    break;
+
+                case 'transform':
+                    rotation = last_rotation + ev.gesture.rotation;
+                    scale = Math.max(1, Math.min(last_scale * ev.gesture.scale, 10));
+                    break;
+
+                case 'dragend':
+                    lastPosX = posX;
+                    lastPosY = posY;
+                    break;
+            }
+
+            var transform =
+                    "translate3d("+posX+"px,"+posY+"px, 0) " +
+                    "scale3d("+scale+","+scale+", 0) " +
+                    "rotate("+rotation+"deg) ";
+
+            elemRect.style.transform = transform;
+            elemRect.style.oTransform = transform;
+            elemRect.style.msTransform = transform;
+            elemRect.style.mozTransform = transform;
+            elemRect.style.webkitTransform = transform;
+        }
+    </script>
 </head>
 
-<body>
+<body><!--
     <div class="content-info">
         <a href="../index.html" style="color: white; text-decoration: none;">
             <div class="header_div" style="color: white">
@@ -28,7 +88,17 @@
                 Offline Map
             </div>
         </a>
-        <img src="../img/max/offlinemap.jpg" class="img-responsive"/>
-    </div>
+-->
+        <div id="zoomwrapper1">
+            <div id="zoom1" class="zoomProps">
+                <div id="rect1" class="polaroid">
+                    <img src="../img/djs/alesso.jpg" alt="" width="200" height="200" />
+                    <span>Coco</span>
+                </div>
+            </div>
+        </div>
+
+        <!--        <img src="../img/max/offlinemap.jpg" class="img-responsive"/>
+    </div>-->
 </body>
 </html>
