--- a/www/sites/offlinemap.html
+++ b/www/sites/offlinemap.html
@@ -5,7 +5,6 @@
 
     <!-- Bootstrap init -->
     <script src="../js/jquery-1.11.2.min.js"></script>
-    <script src="../js/hammer.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/main.js"></script>
     <script src="phonegap.js"></script>
@@ -20,36 +19,82 @@
 
     <title>Electric Love Festival Offline Map</title>
 
-    <script>var dom   = document.body,
-            width = parseInt($('#square').css('width')),
-            vel   = 5.0,
-            min   = 100,
-            max   = 400,
-            scale;
+    <script
 
-    function gestureChange( e ) {
-        e.preventDefault();
+            >var posX=0, posY=0,
+            scale=1, last_scale,
+            last_posX=0, last_posY=0,
+            max_pos_x=0, max_pos_y=0;
 
-        scale = e.scale;
+    hammertime.on('touch drag transform dragend', function(ev) {
+        switch (ev.type) {
+            case 'touch':
+                last_scale = scale;
+                break;
 
-        var tempWidth = width * scale;
+            case 'drag':
+                if (scale != 1) {
+                    posX = last_posX + ev.gesture.deltaX;
+                    posY = last_posY + ev.gesture.deltaY;
+                    if (posX > max_pos_x) {
+                        posX = max_pos_x;
+                    }
+                    if (posX < -max_pos_x) {
+                        posX = -max_pos_x;
+                    }
+                    if (posY > max_pos_y) {
+                        posY = max_pos_y;
+                    }
+                    if (posY < -max_pos_y) {
+                        posY = -max_pos_y;
+                    }
+                } else {
+                    posX = 0;
+                    posY = 0;
+                    saved_posX = 0;
+                    saved_posY = 0;
+                }
+                break;
 
-        if ( tempWidth > max ) tempWidth = max;
-        if ( tempWidth < min ) tempWidth = min;
+            case 'transform':
+                scale = Math.max(1, Math.min(last_scale * ev.gesture.scale, 10));
+                max_pos_x = Math.ceil((scale - 1) * rect.clientWidth / 2);
+                max_pos_y = Math.ceil((scale - 1) * rect.clientHeight / 2);
+                if (posX > max_pos_x) {
+                    posX = max_pos_x;
+                }
+                if (posX < -max_pos_x) {
+                    posX = -max_pos_x;
+                }
+                if (posY > max_pos_y) {
+                    posY = max_pos_y;
+                }
+                if (posY < -max_pos_y) {
+                    posY = -max_pos_y;
+                }
+                break;
+            case 'dragend':
+                last_posX = posX < max_pos_x ? posX : max_pos_x;
+                last_posY = posY < max_pos_y ? posY : max_pos_y;
+                break;
+        }
 
-        $( '#square' ).css( {
-            width  : tempWidth + 'px',
-            height : tempWidth + 'px'
-        } );
-    }
+        // transform!
+        var transform =
+                "translate3d(0, 0, 0) " +
+                "scale3d(1, 1, 0) ";
+        if (scale != 1) {
+            transform =
+                    "translate3d(" + posX + "px," + posY + "px, 0) " +
+                    "scale3d(" + scale + "," + scale + ", 0) ";
+        }
 
-    function gestureEnd( e ) {
-        e.preventDefault();
-
-        width = parseInt( $( '#square' ).css( 'width' ) );
-    }
-
-    Hammer( square ).on( 'pinch', gestureChange );
+        rect.style.transform = transform;
+        rect.style.oTransform = transform;
+        rect.style.msTransform = transform;
+        rect.style.mozTransform = transform;
+        rect.style.webkitTransform = transform;
+    });
     </script>
 </head>
 
@@ -62,16 +107,13 @@
             </div>
         </a>
 -->
-<p>
-    Pinch anywhere. The blue square should expand or shrink (to a degree). The red circle should stay the same.
-</p>
 
-<div class="wrapper">
-    <div class="wrap">
-        <div id="circle"></div>
-    </div>
-    <div class="wrap">
-        <div id="square"></div>
+<script src="//cdnjs.cloudflare.com/ajax/libs/hammer.js/1.0.5/hammer.min.js"></script>
+
+
+<div id="pinchzoom">
+    <div>
+        <img id="rect" src="../img/djs/alesso.jpg" ondragstart="return false" alt="" />
     </div>
 </div>
 
