--- a/www/sites/offlinemap.html
+++ b/www/sites/offlinemap.html
@@ -19,81 +19,33 @@
 
     <title>Electric Love Festival Offline Map</title>
 
-    <script
-
-            >var posX=0, posY=0,
-            scale=1, last_scale,
-            last_posX=0, last_posY=0,
-            max_pos_x=0, max_pos_y=0;
-
-    hammertime.on('touch drag transform dragend', function(ev) {
-        switch (ev.type) {
-            case 'touch':
-                last_scale = scale;
-                break;
-
-            case 'drag':
-                if (scale != 1) {
-                    posX = last_posX + ev.gesture.deltaX;
-                    posY = last_posY + ev.gesture.deltaY;
-                    if (posX > max_pos_x) {
-                        posX = max_pos_x;
-                    }
-                    if (posX < -max_pos_x) {
-                        posX = -max_pos_x;
-                    }
-                    if (posY > max_pos_y) {
-                        posY = max_pos_y;
-                    }
-                    if (posY < -max_pos_y) {
-                        posY = -max_pos_y;
-                    }
-                } else {
-                    posX = 0;
-                    posY = 0;
-                    saved_posX = 0;
-                    saved_posY = 0;
-                }
-                break;
-
-            case 'transform':
-                scale = Math.max(1, Math.min(last_scale * ev.gesture.scale, 10));
-                max_pos_x = Math.ceil((scale - 1) * rect.clientWidth / 2);
-                max_pos_y = Math.ceil((scale - 1) * rect.clientHeight / 2);
-                if (posX > max_pos_x) {
-                    posX = max_pos_x;
-                }
-                if (posX < -max_pos_x) {
-                    posX = -max_pos_x;
-                }
-                if (posY > max_pos_y) {
-                    posY = max_pos_y;
-                }
-                if (posY < -max_pos_y) {
-                    posY = -max_pos_y;
-                }
-                break;
-            case 'dragend':
-                last_posX = posX < max_pos_x ? posX : max_pos_x;
-                last_posY = posY < max_pos_y ? posY : max_pos_y;
-                break;
-        }
-
-        // transform!
-        var transform =
-                "translate3d(0, 0, 0) " +
-                "scale3d(1, 1, 0) ";
-        if (scale != 1) {
-            transform =
-                    "translate3d(" + posX + "px," + posY + "px, 0) " +
-                    "scale3d(" + scale + "," + scale + ", 0) ";
-        }
-
-        rect.style.transform = transform;
-        rect.style.oTransform = transform;
-        rect.style.msTransform = transform;
-        rect.style.mozTransform = transform;
-        rect.style.webkitTransform = transform;
+    <script>$(window).load(function() {
+        var height, image, newX, newY, offset, testScale, width, wrap;
+        image = $('#image');
+        wrap = $('#wrap');
+        width = image.width();
+        height = image.height();
+        offset = wrap.offset();
+        newX = 0;
+        newY = 0;
+        testScale = 1;
+        image.click(function(event) {
+            testScale = event.ctrlKey ? testScale - 0.4 : testScale + 0.4;
+            return pinch(event.clientX, event.clientY, testScale);
+        });
+        return window.pinch = function(x, y, scale) {
+            var newHeight, newWidth;
+            newWidth = image.width() * scale;
+            newHeight = image.height() * scale;
+            x -= offset.left + newX;
+            y -= offset.top + newY;
+            newX += -x * (newWidth - width) / newWidth;
+            newY += -y * (newHeight - height) / newHeight;
+            image.css('-webkit-transform', "scale3d(" + scale + ", " + scale + ", 1)");
+            wrap.css('-webkit-transform', "translate3d(" + newX + "px, " + newY + "px, 0)");
+            width = newWidth;
+            return height = newHeight;
+        };
     });
     </script>
 </head>
@@ -108,14 +60,12 @@
         </a>
 -->
 
-<script src="//cdnjs.cloudflare.com/ajax/libs/hammer.js/1.0.5/hammer.min.js"></script>
-
-
-<div id="pinchzoom">
-    <div>
-        <img id="rect" src="../img/djs/alesso.jpg" ondragstart="return false" alt="" />
-    </div>
+<div id="wrap">
+    <img id="image" src="http://placekitten.com/g/200/300" />
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+
+
 
         <!--        <img src="../img/max/offlinemap.jpg" class="img-responsive"/>
     </div>-->
